# anuite-ve-faiz-hesaplamalari

./: .gitignore  CHANGELOG.md  LICENSE  README.md  deneme.py  pyproject.toml
anuiteler/: __init__.py  aritmetik_anuite.py  cabuklas_anuite.py  devre_basi_anuite.py  devre_sonu_anuite.py  ertelenmis_anuite.py  geometrik_anuite.py  surekli_anuite.py  tek_odeme.py  yardimci.py
tests/: test_annuite.py
