[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "anuite-ve-faiz-hesaplamalari"
version = "1.0.0"
description = "Kapsamlı aktüeryal ve finans matematiği hesaplamaları için Türkçe Python kütüphanesi"
readme = "README.md"
authors = [
    {name = "Zeynep İbiş", email = "zzeynepibis@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Natural Language :: Turkish",
]
keywords = [
    "actuarial",
    "finance",
    "annuity",
    "anüite",
    "faiz",
    "interest",
    "present value",
    "future value",
    "bugünkü değer",
    "gelecek değer",
    "aktüerya",
    "finans matematiği",
    "amortisman",
    "kredi",
    "yatırım",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=0.990",
    "isort>=5.10",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "sphinx-autodoc-typehints>=1.19",
]

[project.urls]
Homepage = "https://github.com/zzeynepibis/anuite-ve-faiz-hesaplamalari"
Documentation = "https://anuite-ve-faiz-hesaplamalari.readthedocs.io"
Repository = "https://github.com/zzeynepibis/anuite-ve-faiz-hesaplamalari"
Issues = "https://github.com/zzeynepibis/anuite-ve-faiz-hesaplamalari/issues"
Changelog = "https://github.com/zzeynepibis/anuite-ve-faiz-hesaplamalari/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["anuiteler"]

[tool.setuptools.package-data]
anuiteler = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=anuiteler --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_calls = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.coverage.run]
source = ["anuiteler"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]